--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,7 @@ on:
 env:
   PROJECT_NAME: grun
   BUILD_TYPE: MinSizeRel
+  VERSION_FILE_PATH: ${{ GITHUB_WORKSPACE }}/version
   GH_TOKEN: ${{ github.token }}
 jobs:
   create-release:
@@ -16,7 +17,7 @@ jobs:
 
       - name: Delete version if it exists
         run: |
-          version="v$(head -n 1 version)"
+          version="v$(head -n 1 ${{ env.VERSION_FILE_PATH }})"
           gh release delete ${version} --cleanup-tag -y || true
 
       - name: Delay between delete and create
@@ -24,7 +25,7 @@ jobs:
 
       - name: Create release
         run: |
-          version="v$(head -n 1 version)"
+          version="v$(head -n 1 ${{ env.VERSION_FILE_PATH }})"
           gh release create ${version} -t "${version}" -F release.md
 
       - name: Keep 10 releases
@@ -63,7 +64,7 @@ jobs:
       - name: Zip Linux
         if: matrix.os == 'ubuntu-latest'
         run: |
-          version="v$(head -n 1 version)"
+          version="v$(head -n 1 ${{ env.VERSION_FILE_PATH }})"
           zipName="${{ env.PROJECT_NAME }}-linux-x64.tar.gz"
           tar -czf ${zipName} -C bin ${{ env.PROJECT_NAME }}
           gh release upload ${version} ${zipName} --clobber
@@ -71,7 +72,7 @@ jobs:
       - name: Zip macOS
         if: matrix.os == 'macos-latest'
         run: |
-          version="v$(head -n 1 version)"
+          version="v$(head -n 1 ${{ env.VERSION_FILE_PATH }})"
           zipName="${{ env.PROJECT_NAME }}-macos-x64.tar.gz"
           tar -czf $zipName -C bin ${{ env.PROJECT_NAME }}
           gh release upload ${version} ${zipName} --clobber
@@ -79,7 +80,7 @@ jobs:
       - name: Zip Windows
         if: matrix.os == 'windows-latest'
         run: |
-          $version="v$(Get-Content -First 1 -Path version)"
+          $version="v$(Get-Content -First 1 -Path '${{ env.VERSION_FILE_PATH }}')"
           $zipName="${{ env.PROJECT_NAME }}-windows-x64.zip"
           tar -czf $zipName -C bin/${{ env.BUILD_TYPE }} ${{ env.PROJECT_NAME }}.exe
           gh release upload $version $zipName --clobber
